# openEuler-rpm-info-parser

./: AUTHORS  README.md  insight.ini  requirements.txt  setup.cfg
etc/: all_sigs.json  conf.yaml  releases.json
omniinsight/: cli.py  db.py  insight.py  objs.py  project_parser.py  rpm_parser.py  utils.py
